# Trustchain-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  check.sh  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
my_env_v4/: __init__.py  env.py  models.py  tasks.py
server/: __init__.py  app.py  environment.py  models.py  openenv_environment.py
tests/: test_environment.py
trustchain_env/: __init__.py  environment.py  graders.py  models.py
