# AI Backend Workflow Environment
# Copyright (c) 2026 Backend Automation Contributors
# Licensed under the MIT License

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-workflow-openenv"
version = "0.1.0"
description = "AI Backend Workflow Automation: A high-utility OpenEnv benchmark"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server", "my_env_v4"]
package-dir = { "server" = "server", "my_env_v4" = "my_env_v4" }
